--- a/style.css
+++ b/style.css
@@ -50,12 +50,11 @@ body * {
 }
 #profile img {
   width: 112px;
-  display: block;
-  margin: auto;
 }
 #profile p {
   font-weight: 500px;
   line-height: 24px;
+  margin-top: 8px;
 }
 
 /* switch */
