--- a/style.css
+++ b/style.css
@@ -32,13 +32,15 @@ body {
   */
 
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 body * {
   color: var(--text-color);
   font-family: "Inter", sans-serif;
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px auto;
   padding: 0 24px;
 }
@@ -152,4 +154,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
