--- a/style.css
+++ b/style.css
@@ -72,17 +72,26 @@ body * {
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
+  
   position: absolute;
   top: 50%;
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  
+  animation: slide-out 0.3s;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
+
 }
 
 .light #switch button{
-right: 0;
-left: initial;
+  animation: slide-in 0.3s forwards;
 }
+
+
 
 #switch span{
   display: block;
@@ -163,5 +172,23 @@ footer {
   }
   .light{
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animacoes */
+@keyframes slide-in {
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+@keyframes slide-out {
+  from{
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
